--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: go
 go: stable
+
 before_install:
 - go get github.com/mitchellh/gox
+
 install:
-- 
+- #skip
+
 script:
 - go get -t -v ./...
 - diff -u <(echo -n) <(gofmt -d .)
@@ -11,6 +14,7 @@ script:
 - go test -v -race ./...
 - gox -os="linux darwin" -arch="amd64" -output="wgclient.." -ldflags "-X main.Rev=`git
   rev-parse --short HEAD`" -verbose ./...
+
 deploy:
   provider: releases
   skip_cleanup: true
